--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
     "motion": "^12.15.0",
     "next": "15.3.3",
